fixed contrast color

--- a/style.css
+++ b/style.css
@@ -459,7 +459,7 @@ h1 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #BF5837; 
     color: #FFFFFF!important;
 }
 
